@@ -1,3 +1,9 @@
+2016-10-16  Dirk Eddelbuettel  <edd@debian.org>
+
+	* tests/test2.r: Write prediction to tempdir() not /tmp
+	* tests/test6.r: Ditto
+	* tests/test8.r: Ditto
+
 2016-07-17  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Version 0.0.7
